# Union-2D

./: CMakeLists.txt  HLButton.qml  HLEdgeButton.qml  HLMenu.qml  QmlMainWidget.qml  QmlWaterProgress.qml  README.en.md  README.md  Union-2D.pro  app_icon.rc  language_en.ts  language_zh_CN.ts  main.cpp  main.qml  qml.qrc  qmlhelper.cpp  qmlhelper.h  svg.cso  themewindow.cpp  themewindow.h
FramelessWindow/: FramelessWindow.qml  HLTitleBar.qml
chatrobot/lib/bson/: _cbson.cp38-win_amd64.pyd
chatrobot/lib/pymongo/: _cmessage.cp38-win_amd64.pyd
chatrobot/lib/regex/: _regex.cp38-win_amd64.pyd
chatrobot/lib/sqlalchemy/: cprocessors.cp38-win_amd64.pyd  cresultproxy.cp38-win_amd64.pyd  (+1 more)
codedemo/: ULinkButton.qml  URoundedButton.qml
configs/: ulinkbutton.json  uroundedbutton.json  utheme.json
controls/: HLButton.qml  HLCalendar.qml  HLCircleButton.qml  HLComboBox.qml  HLDialog.qml  HLEdgeButton.qml  HLFloatingMessage.qml  HLGridView.qml  HLIconItem.qml  HLLineEdit.qml  HLListView.qml  HLMenu.qml  HLMenuItem.qml  HLPassWordLineEdit.qml  HLRoundedButton.qml  HLSearchLineEdit.qml  HLTableView.qml  HLTheme.qml  HLWaterProgress.qml
qml/: QmlMainWidget.qml  main.qml
qml/controls/: UAlert.qml  UAvatar.qml  UBusyIndicator.qml  UBusyIndicator2.qml  UButton.qml  UButtonGroup.qml  UCalendar.qml  UCard.qml  UCheckBox.qml  UCircleButton.qml  UCircleProgressBar.qml  UColorPicker.qml  UComboBox.qml  UDelayButton.qml  UDialog.qml  UDropdown.qml  UEdgeButton.qml  UFloatingMessage.qml  UGridView.qml  UIconItem.qml  ULineEdit.qml  ULinkButton.qml  UListView.qml  UMaskImage.qml  UMenu.qml  UMenuItem.qml  UNavigationBar.qml  UPassWordLineEdit.qml  UProgressBar.qml  URadioButton.qml  URadiusRectangle.qml  URoundedButton.qml  URoundedRectangle.qml  USVGIcon.qml  USearchLineEdit.qml  USettingGroup.qml  USettingItem.qml  USwitch.qml  UTableView.qml  UTextArea.qml  (+6 more)
qml/example/: BlurWidget.qml  ButtonWidget.qml  ChatWidget.qml  CodeDialog.qml  ControlsListView.qml  ControlsWidget.qml  DesignWidget.qml  DropShadowWidget.qml  GlowWidget.qml  HomePage.qml  LayoutWidget.qml  LinkButtonWidget.qml  OverviewWidget.qml  SoftwareLogItem.qml  SoftwareLogWidget.qml  ThemeWidget.qml
qml/framelesswindow/: UCustomMouseArea.qml  UFramelessWindow.qml  UTitleBar.qml
qml/js/: XMLHttpRequest.js
src/: componentloader.cpp  componentloader.h  main.cpp  napplicationtheme.cpp  napplicationtheme.h  qmlhelper.cpp  qmlhelper.h  textdocument.cpp  textdocument.h  viewprovider.cpp  viewprovider.h  waterpool.cpp  waterpool.h
src/model/: tablemodel.cpp  tablemodel.h  treeitem.cpp  treeitem.h  treemodel.cpp  treemodel.h
themes/: blue.xml  cyan.xml  dark.xml  light.xml  magenta.xml  purple.xml
translations/: language_en.ts  language_zh_CN.ts
updatelog/: httpserver.py  softwarelog.json
(+19 files in other folders)
